// Copyright 2021 Cisco Systems, Inc. and/or its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "api/v1alpha1/common.proto";
import "mesh/v1alpha1/config.proto";
import "gogoproto/gogo.proto";
import "google/api/field_behavior.proto";
import "k8s.io/api/core/v1/generated.proto";

// $schema: istio-operator.api.v1alpha1.IstioMeshSpec
// $title: Istio Mesh Spec
// $description: Istio Mesh descriptor

package istio_operator.v2.api.v1alpha1;

option go_package = "github.com/banzaicloud/istio-operator/v2/api/v1alpha1";

// Mesh defines an Istio service mesh
//
// <!-- crd generation tags
// +cue-gen:IstioMesh:groupName:servicemesh.cisco.com
// +cue-gen:IstioMesh:version:v1alpha1
// +cue-gen:IstioMesh:storageVersion
// +cue-gen:IstioMesh:annotations:helm.sh/resource-policy=keep
// +cue-gen:IstioMesh:subresource:status
// +cue-gen:IstioMesh:scope:Namespaced
// +cue-gen:IstioMesh:resource:shortNames="im,imesh",plural="istiomeshes"
// +cue-gen:IstioMesh:printerColumn:name="Age",type="date",JSONPath=".metadata.creationTimestamp"
// +cue-gen:IstioMesh:preserveUnknownFields:false
// -->
//
// <!-- go code generation tags
// +genclient
// +k8s:deepcopy-gen=true
// -->
message IstioMeshSpec {
    istio.mesh.v1alpha1.MeshConfig config = 1;
}

// <!-- go code generation tags
// +genclient
// +k8s:deepcopy-gen=true
// -->
message IstioMeshStatus {
    // Reconciliation status of the Istio mesh
    ConfigState status = 1;

    // Reconciliation error message if any
    string errorMessage = 2;
}
